2007-08-16  Matthew Barnes  <mbarnes@redhat.com>

	* addressbook/e-book-backend-gal.c (load_source):
	Fix compilation errors caused by glibc's new "open" macro (#466987).

2007-08-16  Sankar P  <psankar@novell.com>

	reviewed by: Srinivasa Ragavan <sragavan@novell.com>

	** Fix for bug #466502

	* camel/camel-exchange-provider.c:
	Fixes the problem of "Check in all folders"
	displayed twice.

2007-08-13  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Update translation updates

2007-08-13  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.90 release

2007-08-09  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #464989

	* addressbook/e-book-backend-exchange.c:
	(e_book_backend_exchange_get_contact): Allow only uri based UIDs to be
	searched.

2007-08-08  Srinivasa Ragavan  <sragavan@novell.com>

	* addressbook/e-book-backend-gal.c: (dosearch): Fix for partial GAL
	retrieval.

2007-08-08  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #464639

	* addressbook/e-book-backend-exchange.c:
	(e_book_backend_exchange_get_contact): Implement the get_contact
	handler for remote mode.

2007-08-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #347930

	* camel/camel-exchange-journal.c: (exchange_entry_write),
	(exchange_entry_play):
	* camel/camel-exchange-store.c: (stub_notification):
	* camel/camel-stub.c: (stub_send_internal):
	* mail/mail-stub.c: (connection_handler), (mail_stub_read_args),
	(mail_stub_return_data):
	Changed g_assert_not_reached to g_critical.

2007-07-31  Veerapuram Varadhan <vvaradhan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.6.1 release
	
2007-07-31  Veerapuram Varadhan  <vvaradhan@novell.com>

	* camel/camel-exchange-folder.c: (get_message): Check for Sender
	and Mailing list fields, if Sender alone exist, add
	X-Evolution-Mail-From-Delegate header that would be handled by
	Evolution, while formatting the message.

	* camel/camel-exchange-summary.c: Disable d(x)
